--- a/conf/initial-data/action.yml
+++ b/conf/initial-data/action.yml
@@ -1,5 +1,5 @@
 Action(1):
-  availableMode: 1
+  actionModes: [1]
   title: トピックス編集
   summary: "キャンペーンの管理者が、新規にキャンペーンを登録したり、登録済みのキャンペーンを変更する際の入り口となるページです。このページからキャンペーンを選択し、管理作業を開始します。"
   function: 99
@@ -11,7 +11,7 @@ Action(1):
   majorMessages: 3200
 
 Action(2):
-  availableMode: 1
+  actionModes: [1, 2]
   title: キャンペーン削除
   summary: "改行は\n登録されるか\nあああ"
   function: 100
