add dataTable for action

--- a/conf/initial-data/action.yml
+++ b/conf/initial-data/action.yml
@@ -5,6 +5,7 @@ Action(1):
   function: 99
   settings: [1, 13]
   process: "登録されているキャンペーンの一覧が表示されます。\nここで、将来的にはテストケースの実行コードを記述したい。\n例えば登録だったら、登録画面まで画面遷移をして、項目が表示されるのをverifyする。\n登録ボタンをクリックして、変更内容が登録されることをverifyする"
+  dataTables: [visitor_data, admin_data]
   restriction: "なし"
   supplement: "ここでは、デフォルトで表示される表示項目について説明しています。すべての表示項目については「設定項目一覧表: キャンペーン（P. 319）」を参照してください。 [リード獲得単価]は[リード数]/[実施コスト]です。[リード獲得単価]が[目標単価]を下回ったときには赤文字で表示されます。"
   privateComment: "社内レビュー：\n 開発：OK\n QA:OK\n PM:\n"
