--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -2,5 +2,6 @@
 
 require:
     - play
-    - com.madgag -> util-diff 1.33
-
+#    - com.madgag -> util-diff 1.33
+#    - org.seleniumhq.selenium -> selenium-api 2.11.0
+#    - org.seleniumhq.selenium -> selenium-firefox-driver 2.11.0
